# AI_Controllers

./: .gitmodules
hand_vision_controller/: CMakeLists.txt  package.xml
hand_vision_controller/launch/: hand_vision_controller.launch
hand_vision_controller/notebooks/.ipynb_checkpoints/: RobotCommands-checkpoint.ipynb
hand_vision_controller/scripts/: .gitignore  hand_vision_control.py  record.py  run_model.py
la_z_bot_bringup/: CMakeLists.txt  package.xml
la_z_bot_bringup/launch/: hardware.launch
la_z_bot_description/urdf/: la_z_bot.urdf.xacro
la_z_bot_viz/: package.xml
riva_controller/: CMakeLists.txt  package.xml
riva_controller/launch/: riva_controller.launch
riva_controller/scripts/: .gitignore  command_handler.py  run_asr.bash  setup_riva.bash  transcribe_mic.py
