<?xml version="1.0"?>
<package format="2">
  <name>hand_vision_controller</name>
  <version>0.0.0</version>
  <description>The hand_vision_controller package</description>

  <maintainer email="davesarmoury@gmail.com">Dave Niewinski</maintainer>

  <license>CC-BY-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
