<?xml version="1.0"?>
<package format="2">
  <name>riva_controller</name>
  <version>0.0.0</version>
  <description>The riva_controller package</description>

  <maintainer email="davesarmoury@gmail.com">Dave Niewinski</maintainer>

  <license>CC-BY-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
